--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node -r tsconfig-paths/register src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ioredis": "^4.0.10",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.40",
     "@types/redis": "^2.8.12",
+    "axios": "^0.18.0",
+    "ioredis": "^4.9.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-router": "^7.4.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "tsconfig-paths": "^3.8.0"
   }
 }
