--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-router": "^7.4.0",
+    "node-fetch": "^2.6.0",
     "redis": "^2.8.0",
     "tsconfig-paths": "^3.8.0"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.3.4"
   }
 }
